--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.11.0",
